--- a/package.json
+++ b/package.json
@@ -1,31 +1,6 @@
 {
   "name": "qgnirxral.github",
   "version": "0.0.0",
-  "private": true,
-  "dependencies": {
-    "rxjs": "6.6.7",
-    "quill": "1.3.7",
-    "tslib": "2.3.1",
-    "primeng": "12.1.0-rc.1",
-    "zone.js": "0.11.4",
-    "chart.js": "3.5.0",
-    "primeflex": "2.0.0",
-    "primeicons": "4.1.0",
-    "@types/node": "8.9.5",
-    "@angular/cdk": "12.0.6",
-    "@angular/core": "12.0.5",
-    "@angular/forms": "12.0.5",
-    "@types/jasmine": "3.3.16",
-    "@angular/common": "12.0.5",
-    "@angular/router": "12.0.5",
-    "@angular/compiler": "12.0.5",
-    "@types/jasminewd2": "2.0.8",
-    "web-animations-js": "2.3.2",
-    "@fullcalendar/core": "4.4.0",
-    "@angular/animations": "12.0.5",
-    "@angular/platform-browser": "12.0.5",
-    "@angular/platform-browser-dynamic": "12.0.5"
-  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -34,18 +9,48 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~11.2.4",
+    "@angular/cdk": "^12.0.0",
+    "@angular/common": "~11.2.4",
+    "@angular/compiler": "~11.2.4",
+    "@angular/core": "~11.2.4",
+    "@angular/forms": "~11.2.4",
+    "@angular/platform-browser": "~11.2.4",
+    "@angular/platform-browser-dynamic": "~11.2.4",
+    "@angular/router": "~11.2.4",
+    "angular-web-storage": "^10.0.0",
+    "chart.js": "^2.9.4",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.3.2",
+    "jspdf": "^2.4.0",
+    "jspdf-autotable": "^3.5.20",
+    "moment": "^2.29.1",
+    "ng-recaptcha": "^8.0.1",
+    "ngx-csv": "^0.3.2",
+    "ngx-gauge": "3.0.0",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.4.0",
+    "quill": "^1.3.7",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "web-animations-js": "^2.3.2",
+    "xlsx": "^0.17.2",
+    "zone.js": "~0.11.3"
+  },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular/cli": "~11.0.0",
-    "@angular/compiler-cli": "~11.0.0",
-    "@angular/language-service": "~10.0.1",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "~0.1102.3",
+    "@angular/cli": "~11.2.3",
+    "@angular/compiler-cli": "~11.2.4",
     "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "karma": "~6.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
@@ -53,6 +58,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.1.5"
   }
 }
